adjusted the gap between contact us and sign-up to make sure it makes the rest of the spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,8 @@ body {
    
 }
 
+
+
 ul li a {
     width: auto;
     color: #fff;
@@ -88,6 +90,10 @@ li p {
 
 li p:hover {
     cursor: pointer;
+}
+
+.li-contact-us {
+    margin-bottom: 12px;
 }
 
 .btn {
